# product-owner-ai-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements.txt
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: __init__.py  deps.py  main.py  rate_limit.py  routes.py
apps/web/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
data/demo/: README.md  feedback_chroma_session1.jsonl  feedback_chroma_session2.jsonl  feedback_minimal.jsonl
data/samples/: README.md  feedback_edge_cases.jsonl  feedback_minimal.csv  (+3 more)
docs/: README.md  agentic.md  api-reference.md  architecture-diagram.html  architecture.md  challenges.md  demo_script.md  llm_providers.md  quickstart.md  tech-stack.md
po_agent/: __init__.py
scripts/: dev.py  start.sh  test_chroma_demo.sh
tests/: __init__.py  conftest.py  mock_llm.py  test_agents_contracts.py  test_api_compatibility.py  test_api_full.py  test_canny_loader.py  test_chroma_vector_store.py  test_data_sets.py  test_deduplication.py  test_embeddings.py  test_evaluation.py  test_feedback_agent.py  test_ingestion.py  test_insight_agent.py  test_jira_export.py  test_models.py  test_openai_embeddings_integration.py  test_pipeline_e2e.py  test_priority_agent.py  test_rate_limit.py  test_roadmap.py  test_rules.py  test_scoring.py  test_story_agent.py  test_synthesis_agent.py  test_tools.py  test_validation.py  test_whatif.py
(+74 files in other folders)
